# claude-code-orchestrator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json  settings.local.template.json
.claude/skills/: commenting  create-cr  create-doc  decomposition  git-workflow  grill-me  harsh-general-engineering-standards  harsh-go-engineering-standards  harsh-java-engineering-standards  harsh-nodejs-engineering-standards  harsh-php-engineering-standards  harsh-typescript-engineering-standards  kb-authoring  orchestrator  promote-cr  tdd  to-prd  write-a-skill
.github/workflows/: ci.yml  release.yml  version-tag.yml
claude-skill/: SKILL.md
docs/: threat-model.md
docs/adrs/: ADR-002-signal-json-sentinel-line.md  ADR-003-dangerously-skip-permissions.md  ADR-004-oblivious-orchestrator.md  ADR-006-workflow-directory-convention.md  ADR-007-alignment-pipeline-pause.md  ADR-008-pluggable-stage-implementations.md  ADR-009-fix-cycle-same-run.md  ADR-010-fix-cycle-automatic-trigger.md  ADR-011-fix-cycle-iteration-limit.md  ADR-012-bare-flag-on-stage-invocations.md  ADR-013-parallel-discovery-fan-out.md  ADR-014-explicit-release-workflow.md  ADR-015-prompt-path-aliases.md  ADR-016-plan-graph-projection-model.md  ADR-017-deterministic-manifest-checker.md  ADR-017-deterministic-verification-stage.md  ADR-018-agent-runner-abstraction.md  ADR-019-github-integration-and-draft-pr.md  ADR-020-renderer-materialised-prompt-panel-nodes.md  ADR-021-fix-verification-cycle.md  ADR-022-claude-runners-oauth-only.md  ADR-023-sterile-context-suppresses-mcps.md  ADR-024-streaming-progress-events.md  ADR-025-remove-dangerously-skip-permissions.md  ADR-026-plan-status-precedence.md  ADR-027-domain-language-glossary.md  ADR-027-executive-summary-finalisation.md  ADR-028-executive-summary-finalisation.md  ADR-029-pr-draft-agent-override.md  ADR-030-wave-verification.md  ADR-031-slice-completion-vs-wave-integration.md  ADR-032-discovery-unresolved-as-alignment-inputs.md  ADR-033-baseline-vs-net-new-verification.md  _template.md  (+4 more)
orchestrator/: __init__.py  _cli_tui.py  _git.py  _github.py  _prompts.py  bootstrap.py  cli.py  glossary.py  logger.py  manifest_check.py  orchestrate.py  paths.py  plan.py  plan_updates.py  profile.py  renderer.py  review_cycle.py  run_stage.py  signal.py  slice_dispatcher.py  stage_dispatchers.py  standards.py  state.py  validator.py  wave_verification.py
profiles/: full.yaml
schemas/: alignment.json  decomposition.json  discovery.json  review.json
tests/: e2e_harness.py  test_agent_runner.py  test_bootstrap.py  test_cli.py  test_cli_tui.py  test_discovery_alignment_characterization.py  test_e2e_fix_cycle.py  test_e2e_happy_path.py  test_e2e_minimal_codex_profile.py  test_e2e_minimal_profile.py  test_e2e_spike_profile.py  test_finalize.py  test_fix_verification.py  test_git_setup.py  test_git_state.py  test_github.py  test_glossary.py  test_load_profile.py  test_manifest_check.py  test_orchestrate.py  test_orchestrate_glossary.py  test_paths.py  test_plan.py  test_plan_update_characterization.py  test_pr_notice.py  test_progress.py  test_renderer.py  test_resume_baseline_characterization.py  test_review_cycle.py  test_run_deterministic_stage.py  test_run_stage.py  test_signal.py  test_slice_dispatch_characterization.py  test_standards.py  test_state.py  test_validator.py  test_wave_verification_characterization.py
(+148 files in other folders)
