[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestrator"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "jinja2>=3.1",
    "jsonschema>=4.21",
    "pyyaml>=6.0",
]

[project.scripts]
orchestrator = "orchestrator.cli:main"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["."]
include = ["orchestrator*"]

[tool.setuptools.package-data]
orchestrator = ["prompts/**/*.md", "schemas/*.json", "profiles/*.yaml"]
