[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestrator"
dynamic = ["version"]
description = "Pipeline sequencer for feature development with Claude Code"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Gez Page"}]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1",
    "jinja2>=3.1",
    "jsonschema>=4.21",
    "pyyaml>=6.0",
]

[project.urls]
Repository = "https://github.com/gezpage/claude-code-orchestrator"

[project.scripts]
orchestrator = "orchestrator.cli:main"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["."]
include = ["orchestrator*"]

[tool.setuptools.package-data]
orchestrator = ["prompts/**/*.md", "schemas/*.json", "profiles/*.yaml"]

[dependency-groups]
dev = [
    "mypy>=1.14",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "types-jsonschema>=4.23",
    "types-PyYAML>=6.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "S", "T20", "RUF"]
ignore = ["E501", "S603", "S607"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S108", "F841"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=orchestrator --cov-report=term-missing --cov-fail-under=80"
